Fix horizontal scrolling bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -144,6 +144,7 @@ nav > a {
     height: var(--app-height);
     min-height: 65rem;
     width: 100vw;
+    max-width: 100%;
     display: grid;
     grid-auto-columns: auto;
     grid-template-columns: repeat(12, 1fr);
@@ -164,7 +165,7 @@ nav > a {
     display: inline-block;
     vertical-align: top;
     margin-top: 1.6rem;
-    margin-left: 4.2rem;
+    margin-left: 2.4rem;
 }
 .header-content > h1 {
     color: #f9f8f6;
@@ -416,6 +417,7 @@ footer {
     display: grid;
     font-size: 1.4rem;
     width: 100vw;
+    max-width: 100%;
     column-gap: 3.2rem;
     grid-auto-columns: auto;
     background-color: #667A68;
@@ -468,6 +470,7 @@ footer {
         top: -200vh;
         padding: 0px;
         width: 100vw;
+        max-width: 100%;
         display: flex;
         position: fixed;
         align-items: center;
@@ -487,6 +490,7 @@ footer {
         background-color: rgb(20, 20, 20); 
         height: 100vh;
         width: 100vw;
+        max-width: 100%;
         transition: 0.6s;
     }
     .nav-overlay.active {
